--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
 .hidden{
     display:none;
 }
+body{
+    position: relative;
+    margin:0;
+}
+#quote span{
+    display: block;    
+}
+img{
+    width: 100%;
+    position: absolute;
+    top:0;
+    z-index:-1;
+}
+#big{
+    background-color: rgb(255, 255, 255);
+    width:40%;
+    opacity:0.5;
+}
+h2{
+    margin:0;
+}
