--- a/css/style.css
+++ b/css/style.css
@@ -31,14 +31,38 @@ h2{
     justify-content: center;    
 }
 #clock{
-    font-size:40px;
+    font-size:50px;
+    margin:5px;
 }
 h1{
     font-size:50px;
 }
 #big-clock{
     background-color:aqua;
+    border-radius:20px;
+    margin-top:20px;
+    margin-bottom:40px;
 }
 #big-form,#big-name{
     background-color:rgb(255, 157, 0);
+    border-radius:50px;
+    margin-bottom:20px;
+}
+#big-form{
+    width:50%;
+    height:40px;
+}
+#big-form form{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    width:100%;
+    height:100%;
+}
+
+#big-form form input{
+    font-size:20px;
+}
+li{
+    margin:10px;
 }
