--- a/css/style.css
+++ b/css/style.css
@@ -15,18 +15,21 @@ body{
 }
 #quote{ 
     position: absolute;
-    background-color: rgb(255, 240, 240);
     display:flex;
     flex-direction: column;
     justify-content: center;
     bottom:0;
     left:50%;
     transform: translate(-50%,0);
+    transition: all 1s ease-in-out;
 }
-#quote span{
-    display: flex;
-    justify-content: center;   
+#quote span{  
     text-align: center; 
+    transition: all 1s ease-in-out;
+}
+#quote span:first-child{  
+    margin:10px;
+    width: 700px;
 }
 img{
     width: 100%;
