--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,19 @@ h2{
     margin:0;
 }
 #weather span{
-    display:block;
-    justify-content: center;    
+    text-align: center;
+    display:flex;
+    justify-content: center;
+    margin:10px;
+}
+#weather span:last-child{
+    opacity:0.7;
+}
+#weather{
+    position: absolute;
+    right:0;
+    top:0;
+    padding:20px;
 }
 #clock{
     font-size:50px;
