--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 html{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;   
     position: relative;
     height:100vh;
     margin:0;
@@ -56,9 +57,10 @@ h2{
     display:flex;
     justify-content: center;
     margin:10px;
+    font-size:20px;
 }
 #weather span:last-child{
-    opacity:0.7;
+    color: rgba(0, 0, 0, 0.726);
 }
 #weather{
     position: absolute;
@@ -68,14 +70,14 @@ h2{
 }
 #clock{
     font-size:50px;
-    margin:5px;
+    margin:20px;
 }
 h1{
     font-size:50px;
 }
 #big-clock{
     background-color:aqua;
-    border-radius:20px;
+    border-radius:60px;
     margin-top:20px;
     margin-bottom:40px;
 }
@@ -111,8 +113,9 @@ h1{
     display:none;
 }
 #big-name h1{
-    font-size:55px;
-    margin:25px;
+    font-size:60px;
+    margin:20px;
+    border-radius:60px;
 }
 #big-name{
     box-sizing: border-box;
