--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ h1{
     margin-left:10px;
     margin-right:10px;
     margin-top:10px;
+    border: black solid 2px;
 }
 .hidden{
     display:none;
